--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 </head>
 <body>
-<h1>Login</h1>
-<form th:action="@{/authenticate}" method="post">
-  <div>
-    <label for="email">email:</label>
-    <input type="text" id="email" name="email" required />
-  </div>
-  <div>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required />
-  </div>
-  <button type="submit">Login</button>
-</form>
+<div class="container">
+    <div class="my-4">
+        <h2>로그인</h2>
+    </div>
+    <form th:action="@{/authenticate}" method="POST">
+        <div class="mb-3">
+            <label for="username" class="form-label">username</label>
+            <input type="text" class="form-control" id="username" name="username">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password">
+        </div>
+        <button type="submit" class="btn btn-primary">로그인</button>
+    </form>
+</div>
 </body>
 </html>
